--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="header__wrapper">
                 <div class="header__logo">
-                    <a href="#!">
+                    <a href="https://cpa.club/">
                         <img src="./img/header/logo.png" alt="logo">
                     </a>
                 </div>
@@ -70,7 +70,7 @@
                     </h2>
                     <img src="./img/main/galaxy.png" alt="galaxy" class="main__image">
                     <h2 class="main__title">ОФИЦИАЛЬНАЯ ПРЕПАТИ WAS'21</h2>
-                    <p class="main__description">со всеми топами партнерского маркетинга</p>
+                    <p class="main__description">Препати со всеми топами партнерского маркетинга</p>
                 </div>
 
                 <div class="time">
@@ -626,7 +626,7 @@
             <div class="footer__wrapper">
                 <div class="footer__column">
                     <div class="footer__left">
-                        <a href="#!" class="footer__logo">
+                        <a href="https://cpa.club/" class="footer__logo">
                             <img src="./img/footer/logo.png" alt="logo">
                         </a>
                         <div class="footer__rights">
