--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                         <span class="main__city">Москва</span>
                     </h2>
                     <img src="./img/main/galaxy.png" alt="galaxy" class="main__image">
-                    <h2 class="main__title">ОФИЦИАЛЬНАЯ ПРЕПАТИ WAS'21</h2>
-                    <p class="main__description">Препати со всеми топами партнерского маркетинга</p>
+                    <h2 class="main__title">Препати со всеми топами</h2>
+                    <p class="main__description">партнерского маркетинга</p>
                 </div>
 
                 <div class="time">
