--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
                         <li data-scroll="#programm" class="nav__item">
                             <a href="#!" class="nav__link">Программа</a>
                         </li>
-                        <li data-scroll="#sponsor" class="nav__item">
-                            <a href="#!" class="nav__link">Спонсоры</a>
-                        </li>
                         <li data-scroll="#contacts" class="nav__item">
                             <a href="#!" class="nav__link">Контакты</a>
                         </li>
@@ -238,7 +235,7 @@
         <div class="feels">космическая атмосфера  космическая атмосфера  космическая атмосфера  космическая атмосфера</div>
     </section>
 
-
+<!-- 
     <section id="sponsor" class="general-sponsor">
         <div class="container">
             <div class="general-sponsor__wrapper">
@@ -543,9 +540,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="media-partners">
+    <!-- <section class="media-partners">
         <div class="container">
             <div class="media-partners__wrapper">
                 <h2 class="media-partners__title">Медиапартнеры</h2>
@@ -617,7 +614,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <footer id="contacts" class="footer">
@@ -724,6 +721,38 @@
     <button class="go-to-top">
         <svg width="38" height="38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M2.375 19a16.625 16.625 0 1 0 33.25 0 16.625 16.625 0 0 0-33.25 0zM38 19a19 19 0 1 1-38 0 19 19 0 0 1 38 0zm-17.813-8.313a1.188 1.188 0 0 0-2.375 0v13.759l-5.096-5.1a1.19 1.19 0 0 0-1.682 1.682l7.125 7.125a1.187 1.187 0 0 0 1.682 0l7.125-7.125a1.189 1.189 0 1 0-1.682-1.681l-5.096 5.099V10.687z" fill="#fff"/></svg>
     </button>
+
+    <div class="send">
+        <div class="container">
+            <div class="send__wrapper">
+                <div class="countdown-box">
+                    <div class="flex-box">
+                        <div class="item"><h3>Успей зарегистрироваться<span>До пати осталось:</span></h3></div>
+                        <div class="item">
+                            <div id="countdown" class="countdown">
+                                <!-- <div class="countdown-number">
+                                    <span class="days countdown-time"></span>
+                                    <span class="countdown-text">Дни</span>
+                                </div>
+                                <div class="countdown-number">
+                                    <span class="hours countdown-time"></span>
+                                    <span class="countdown-text">Часы</span>
+                                </div>
+                                <div class="countdown-number">
+                                    <span class="minutes countdown-time"></span>
+                                    <span class="countdown-text">Минуты</span>
+                                </div> -->
+
+                                
+                                <span class="time__value"></span>
+                            </div>
+                        </div>
+                        <div class="item"><a href="№!" class="buy">Подать заявку</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
  
 
 </body>
