--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
                                     Лиана
                                     <span>ник в телеграме:</span>
                                 </div>
-                                <a href="https://tele.click/{@LianaNu}" class="organizators__telegram">@LianaNu</a>
+                                <a href="https://tlgg.ru/@LianaNu" class="organizators__telegram">@LianaNu</a>
                             </div>
 
                             <div class="organizators__item">
@@ -655,7 +655,7 @@
                                     Екатерина
                                     <span>ник в телеграме:</span>
                                 </div>
-                                <a href="https://tele.click/{@kkbarselona}" class="organizators__telegram">@kkbarselona</a>
+                                <a href="https://tlgg.ru/@kkbarselona" class="organizators__telegram">@kkbarselona</a>
                             </div>
                         </div>
                     </div>
