--- a/index.html
+++ b/index.html
@@ -542,10 +542,10 @@
         </div>
     </section> -->
 
-    <!-- <section class="media-partners">
+    <section class="media-partners">
         <div class="container">
             <div class="media-partners__wrapper">
-                <h2 class="media-partners__title">Медиапартнеры</h2>
+                <!-- <h2 class="media-partners__title">Медиапартнеры</h2>
                 <div class="media-partners__list">
                         <div class="media-partners__item">
                             <img src="./img/mediapartners/partner1.png" alt="partner">
@@ -598,7 +598,7 @@
                         <div class="media-partners__item">
                             <img src="./img/mediapartners/partner13.png" alt="partner">
                         </div>
-                </div>
+                </div> -->
 
                 <div class="media-partners__content">
                     <div class="media-partners__spot">
@@ -614,7 +614,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
 
     <footer id="contacts" class="footer">
