--- a/index.html
+++ b/index.html
@@ -51,10 +51,15 @@
     </header>
 
 
+
     <!-- Main -->
     <section class="main">
         <div class="girl">
-            <img src="./img/main/Group16.png" alt="girl">
+            <!-- <img src="./img/main/2.webm" alt="girl"> -->
+            <video  muted playsinline autoplay="autoplay" loop="loop" preload="auto">
+                <source src="./img/main/2.webm" type="video/webm">
+                <source src="./img/main/2.mp4" type="video/mp4">
+            </video>
         </div>
         <div class="elipse">
             <img src="./img/main/Ellipse.png" alt="elipse">
